--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-# You must first activate a Billing Account here: https://platform.openai.com/account/billing/overview
-# Then get your OpenAI API Key here: https://platform.openai.com/account/api-keys
-OPENAI_API_KEY=XXXXXXXX
+# Defined inside of the Tennr platform
+TENNR_API_KEY=XXXXXXXX
+TENNR_AGENT_ID=XXXXXXXX
 
 # Generate a random secret: https://generate-secret.vercel.app/32 or `openssl rand -base64 32`
 AUTH_SECRET=XXXXXXXX
